@@ -2,14 +2,15 @@
 
 use strict;
 use warnings;
-use Test::More tests => 58;
-#use Test::More 'no_plan';
+#use Test::More tests => 58;
+use Test::More 'no_plan';
 use File::Spec::Functions qw(catfile catdir tmpdir);
 use Test::MockModule;
 use Test::Output;
 use File::Path qw(remove_tree);
 use File::Copy::Recursive qw(dircopy fcopy);
 use Test::File;
+use Fcntl qw(:mode);
 
 my $CLASS;
 BEGIN {
@@ -253,7 +254,7 @@ is_deeply \@users, [qw(
 ##############################################################################
 # digest_for()
 my $pgz = catfile qw(dist pair 0.1.1 pair-0.1.1.zip);
-is $sync->digest_for($pgz), '585214bf8a733524f2ba0d83c229128d0152f537',
+is $sync->digest_for($pgz), '703c0c485166636317c3d4bc8a1a36d512761af7',
     'Should get expected digest from digest_for()';
 
 ##############################################################################
@@ -296,12 +297,18 @@ my @files = (qw(
 
 my $src_dir = PGXN::API->instance->source_dir;
 my $base = catdir $src_dir, 'pair', 'pair-0.1.1';
+
 file_not_exists_ok catfile($base, $_), "$_ should not exist" for @files;
 
 # Unzip it.
 ok my $zip = $sync->unzip($pgz, {name => 'pair'}), "Unzip $pgz";
 isa_ok $zip, 'Archive::Zip';
 file_exists_ok catfile($base, $_), "$_ should now exist" for @files;
+my $readall = S_IRUSR | S_IRGRP | S_IROTH;
+ok(
+    ((stat catfile $base, $_)[2] & $readall) == $readall,
+    "$_ should be readable by all",
+) for @files;
 
 # Now try a brokenated zip file.
 stderr_like { $sync->unzip($json) }
