@@ -2,6 +2,10 @@ Revision history for Perl extension PGXN::API
 
 0.16.2
       - Empty Documentation files are no longer indexed or displayed.
+      - All files extracted from distribution zip files into the source
+        directory are now globally readable. This behavior eliminates
+        permissions errors when the user that serves the files is different
+        than the one that unzipped them.
 
 0.16.1  2012-01-10T04:30:02Z
       - Added `version_string` class method to PGXN::API. It should always be
